# bitgo-github-ai-project-filter

./: .env.example  .gitignore  README.md  SIGNING_GUIDE.md  bitgo-product-guide-en.html  bitgo-product-guide-optimized-en-v1.html  bitgo-product-guide-optimized-en-v2.html  bitgo-product-guide-optimized-en-v3.html  bitgo-product-guide-optimized-en.html  bitgo-product-guide-optimized-v1.html  bitgo-product-guide-optimized-v2.html  bitgo-product-guide-optimized-v3.html  bitgo-product-guide-optimized.html  bitgo-product-guide.html  generate_price_comparison.py  pricing_fields_readable_expanded_with_issuer_selected_final.md  prompt-en.txt  prompt-zh.txt  pyproject.toml  reasoning-api-usage-en.html  reasoning-api-usage-en.md  reasoning-api-usage-enigmhaven-en.html  reasoning-api-usage-enigmhaven-with-models.html  reasoning-api-usage-enigmhaven.html  reasoning-api-usage.html  reasoning-api-usage.md  sufy_vs_astraflow_token_price_report.html  sufy_vs_astraflow_token_price_report.md  sufy_vs_astraflow_token_price_report_cny_direct.html  sufy_vs_astraflow_token_price_report_cny_direct.md  价格.csv  签名.md
examples/external_reasoning_api/: README.md  go.mod  go.sum  request_example.py  sign_ltc.go
src/github_ai_daily/: __init__.py  bff.py  cli.py  config.py  crypto.py  github.py  mail.py  models.py  reasoning.py  reports.py  secrets.py
tests/: test_bff.py  test_cli.py  test_config.py  test_crypto.py  test_github.py  test_mail.py  test_reasoning.py  test_reports.py  test_secrets.py
tools/reasoning-signer/: go.mod  go.sum  main.go  main_test.go
