[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-ai-daily"
version = "0.1.0"
description = "Generate a daily report of trending GitHub AI projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "cryptography>=42,<46",
  "httpx>=0.27,<1",
  "keyring>=25,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "respx>=0.21,<1",
]

[project.scripts]
github-ai-daily = "github_ai_daily.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_ai_daily"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
